site titles, og image, searchbar cutoff fix

--- a/css/searchbar.scss
+++ b/css/searchbar.scss
@@ -206,7 +206,7 @@ select:active, select:hover {
       background-color: transparent;
       overflow-y: scroll;
       position: fixed;
-      top: 134px;
+      top: 149px;
       bottom: 0;
       left: 0;
       width: 300px;
